Fixes overflowing of TemplateExplorerFilter-label
Just a quick fix, there might be some better options.

--- a/ui/template-explorer.reel/template-explorer.css
+++ b/ui/template-explorer.reel/template-explorer.css
@@ -123,7 +123,8 @@
 }
 
 .TemplateExplorerFilter-label {
-    margin-right: 12px;
+    display: inline-block;
+    margin: 4px 12px 4px 0;
     vertical-align: middle;
     font-size: 12px;
     color: #666;
@@ -131,7 +132,7 @@
 }
 
 .TemplateExplorerFilter .matte-InputCheckbox {
-    margin: 0 6px 0 0;
+    margin: 0 4px 0 0;
     vertical-align: middle;
 }
 
